Fix CLI host handling (#277)