@@ -46,11 +46,10 @@ public class JPv3UtilsTest {
         final Path source = Path.of("src/test/resources/zip/nested.zip");
         final Path target = Path.of(TARGET, "nested.zip");
         final List<String> expected = List.of("nested/collection/jbu-2-collection.csv",
-            "nested/layers/jbu-2-layers.csv", "nested/pages/jbu-2-pages.csv", "nested/works/jbu-2-works.csv").stream()
-          .map(Path::of).map(Path::toString).collect(Collectors.toList());
+          "nested/layers/jbu-2-layers.csv", "nested/pages/jbu-2-pages.csv", "nested/works/jbu-2-works.csv");
 
         JPv3Utils.outputZipFile(source, target, HOST);
-        checkZipEntries(target, expected);
+        checkZipEntries(target, expected.stream().map(Path::of).map(Path::toString).collect(Collectors.toList()));
     }
 
     /**
@@ -63,8 +62,8 @@ public class JPv3UtilsTest {
         final String source = StringUtils.read(new File("src/test/resources/csv/jbu-collection.csv"));
         final List<String> actual = JPv3Utils.readHeaders(source);
         final List<String> expected = List.of("File Name", "Object Type", "Title", "Item Sequence", "Item ARK",
-          "Parent ARK", "IIIF target", "viewingHint", "Text direction", "Bucketeer state", "Thumbnail", "media.height",
-          "media.width", "IIIF Access URL", "NOTES");
+          "Parent ARK", "IIIF target", "viewingHint", "Text direction", "Bucketeer state", "Thumbnail",
+          "media.height", "media.width", "IIIF Access URL", "NOTES");
 
         assertEquals(expected, actual);
     }
@@ -80,8 +79,7 @@ public class JPv3UtilsTest {
         final List<String> entryNames;
 
         try (ZipFile zipFile = new ZipFile(aZipPath.toFile())) {
-            entryNames = zipFile.stream().filter(entry -> !entry.isDirectory()).map(ZipEntry::getName).collect(
-              Collectors.toList());
+            entryNames = zipFile.stream().filter(entry -> !entry.isDirectory()).map(ZipEntry::getName).toList();
         }
 
         assertEquals(aExpectedList, entryNames);
